force-app/main/default/objects/Contact/fields/Account_Locked__c.field-meta.xml
<CustomField>
    <fullName>Account_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Locked</label>
    <type>Checkbox</type>
</CustomField>