force-app/main/default/objects/Contact/fields/Can_Apply_Bereavement__c.field-meta.xml
<CustomField>
    <fullName>Can_Apply_Bereavement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Apply Bereavement</label>
    <type>Checkbox</type>
</CustomField>