force-app/main/default/objects/Contact/fields/Can_Apply_Casual__c.field-meta.xml
<CustomField>
    <fullName>Can_Apply_Casual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Apply Casual</label>
    <type>Checkbox</type>
</CustomField>