force-app/main/default/objects/Contact/fields/Can_Apply_Maternity__c.field-meta.xml
<CustomField>
    <fullName>Can_Apply_Maternity__c</fullName>
    <formula>AND( NOT(Is_Probation__c), ISPICKVAL(Gender__c, &quot;Female&quot;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Can Apply Maternity</label>
    <type>Checkbox</type>
</CustomField>