force-app/main/default/objects/Contact/fields/Days_Remaining_in_Probation__c.field-meta.xml
<CustomField>
    <fullName>Days_Remaining_in_Probation__c</fullName>
    <formula>IF(Is_Probation__c, Probation_End_Date__c - TODAY(), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Remaining in Probation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>