force-app/main/default/objects/Contact/fields/Employee_ID_Seq__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID_Seq__c</fullName>
    <displayFormat>CT-{0000}</displayFormat>
    <label>Employee ID Seq</label>
    <type>AutoNumber</type>
</CustomField>