force-app/main/default/objects/Contact/fields/Guardian_Name__c.field-meta.xml
<CustomField>
    <fullName>Guardian_Name__c</fullName>
    <description>Name of the employee's guardian or emergency contact.</description>
    <label>Guardian Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>