force-app/main/default/objects/Contact/fields/Guardian_Phone__c.field-meta.xml
<CustomField>
    <fullName>Guardian_Phone__c</fullName>
    <description>Phone number of the employee's guardian.</description>
    <label>Guardian Phone</label>
    <type>Phone</type>
</CustomField>