force-app/main/default/objects/Contact/fields/Guardian_Relation__c.field-meta.xml
<CustomField>
    <fullName>Guardian_Relation__c</fullName>
    <description>Relation of the Guardian to the Employee</description>
    <label>Guardian Relation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Father</fullName>
            </value>
            <value>
                <fullName>Mother</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Sibling</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>