force-app/main/default/objects/Contact/fields/Is_HR_Admin__c.field-meta.xml
<CustomField>
    <fullName>Is_HR_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is HR Admin</label>
    <type>Checkbox</type>
</CustomField>