force-app/main/default/objects/Contact/fields/Is_Probation__c.field-meta.xml
<CustomField>
    <fullName>Is_Probation__c</fullName>
    <formula>ISPICKVAL(Employee_Type__c, &quot;Probation&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is_Probation</label>
    <type>Checkbox</type>
</CustomField>