force-app/main/default/objects/Contact/fields/Is_Technical_System_Admin__c.field-meta.xml
<CustomField>
    <fullName>Is_Technical_System_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Technical System Admin</label>
    <type>Checkbox</type>
</CustomField>