force-app/main/default/objects/Contact/fields/Password_Hash__c.field-meta.xml
<CustomField>
    <fullName>Password_Hash__c</fullName>
    <label>Password Hash</label>
    <length>255</length>
    <type>Text</type>
</CustomField>