force-app/main/default/objects/Contact/fields/Password_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Password_Last_Updated__c</fullName>
    <label>Password Last Updated</label>
    <type>DateTime</type>
</CustomField>