force-app/main/default/objects/Contact/fields/Password_Set__c.field-meta.xml
<CustomField>
    <fullName>Password_Set__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Password Set</label>
    <type>Checkbox</type>
</CustomField>