force-app/main/default/objects/Contact/fields/Portal_Access_Type__c.field-meta.xml
<CustomField>
    <fullName>Portal_Access_Type__c</fullName>
    <label>Portal Access Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>HR_Admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>