force-app/main/default/objects/Contact/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>CTO</fullName>
            </value>
            <value>
                <fullName>CIO</fullName>
            </value>
            <value>
                <fullName>COO</fullName>
            </value>
            <value>
                <fullName>CFO</fullName>
            </value>
            <value>
                <fullName>CISO</fullName>
            </value>
            <value>
                <fullName>VP of Engineering</fullName>
            </value>
            <value>
                <fullName>VP of Product</fullName>
            </value>
            <value>
                <fullName>VP of Sales</fullName>
            </value>
            <value>
                <fullName>Director of Engineering</fullName>
            </value>
            <value>
                <fullName>Director of Product</fullName>
            </value>
            <value>
                <fullName>Director of Sales</fullName>
            </value>
            <value>
                <fullName>Engineering Manager</fullName>
            </value>
            <value>
                <fullName>Development Manager</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Product Manager</fullName>
            </value>
            <value>
                <fullName>Product Owner</fullName>
            </value>
            <value>
                <fullName>Program Manager</fullName>
            </value>
            <value>
                <fullName>Delivery Manager</fullName>
            </value>
            <value>
                <fullName>Team Lead</fullName>
            </value>
            <value>
                <fullName>Technical Lead</fullName>
            </value>
            <value>
                <fullName>Scrum Master</fullName>
            </value>
            <value>
                <fullName>Software Engineer</fullName>
            </value>
            <value>
                <fullName>Software Developer</fullName>
            </value>
            <value>
                <fullName>Frontend Developer</fullName>
            </value>
            <value>
                <fullName>Backend Developer</fullName>
            </value>
            <value>
                <fullName>Full Stack Developer</fullName>
            </value>
            <value>
                <fullName>Mobile App Developer</fullName>
            </value>
            <value>
                <fullName>Web Developer</fullName>
            </value>
            <value>
                <fullName>Salesforce Developer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>