force-app/main/default/objects/Contact/fields/Probation_Confirmed_Date__c.field-meta.xml
<CustomField>
    <fullName>Probation_Confirmed_Date__c</fullName>
    <label>Probation Confirmed Date</label>
    <type>Date</type>
</CustomField>