force-app/main/default/objects/Contact/fields/Probation_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Probation_End_Date__c</fullName>
    <formula>Joining_Date__c + Probation_Period_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Probation_End_Date</label>
    <type>Date</type>
</CustomField>