force-app/main/default/objects/Contact/fields/Probation_Period_Days__c.field-meta.xml
<CustomField>
    <fullName>Probation_Period_Days__c</fullName>
    <label>Probation_Period_Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>