force-app/main/default/objects/Contact/fields/Probation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Probation_Start_Date__c</fullName>
    <formula>Joining_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Probation Start Date</label>
    <type>Date</type>
</CustomField>