force-app/main/default/objects/Contact/fields/Profile_Picture_URL__c.field-meta.xml
<CustomField>
    <fullName>Profile_Picture_URL__c</fullName>
    <description>URL to the user's uploaded profile picture.</description>
    <label>Profile Picture URL</label>
    <type>Url</type>
</CustomField>