force-app/main/default/objects/Contact/fields/Reset_OTP__c.field-meta.xml
<CustomField>
    <fullName>Reset_OTP__c</fullName>
    <description>Stores the OTP generated for password reset.</description>
    <label>Reset OTP</label>
    <length>6</length>
    <type>Text</type>
</CustomField>