force-app/main/default/objects/Contact/fields/Reset_OTP_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Reset_OTP_Expiry__c</fullName>
    <description>Stores the expiration datetime for the password reset OTP.</description>
    <label>Reset OTP Expiry</label>
    <type>DateTime</type>
</CustomField>