force-app/main/default/objects/Contact/validationRules/Joining_Date_Not_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Joining_Date_Not_Future</fullName>
    <active>true</active>
    <errorConditionFormula>Joining_Date__c &gt; TODAY()</errorConditionFormula>
    <errorMessage>&quot;Joining Date cannot be in the future.&quot;</errorMessage>
</ValidationRule>